Fix: Explicitly ensure build.gradle line 88 is correct (android {)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,6 +85,7 @@ if (keystorePropertiesFile.exists()) {
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
+// Android configuration block
 android {
     ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
