--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -78,12 +78,15 @@ jobs:
         if: github.event.inputs.build_type == 'apk' || github.event.inputs.build_type == ''
         run: |
           cd android
-          # Use GitHub Actions run number as version code to ensure each build is unique
-          # This prevents Firebase App Distribution from updating the same release
+          # For Firebase App Distribution: Use GitHub Actions run number as version code
+          # Firebase allows multiple builds with the same app version as long as build number is unique
+          # This is different from Play Store which requires strict version increments
           VERSION_CODE=${{ github.run_number }}
-          echo "📦 Building APK with version code: $VERSION_CODE"
-          echo "📦 Build number: ${{ github.run_number }}"
-          echo "📦 Commit SHA: ${{ github.sha }}"
+          echo "📦 Building APK for Firebase App Distribution"
+          echo "   Version Code: $VERSION_CODE (from GitHub run number)"
+          echo "   Build number: ${{ github.run_number }}"
+          echo "   Commit SHA: ${{ github.sha }}"
+          echo "   Note: Firebase allows same version name with unique build numbers"
 
           ./gradlew assembleDevelopRelease \
             -PversionCode=$VERSION_CODE \
@@ -121,9 +124,11 @@ jobs:
         if: github.event.inputs.build_type == 'aab'
         run: |
           cd android
-          # Use GitHub Actions run number as version code to ensure each build is unique
+          # For Firebase App Distribution: Use GitHub Actions run number as version code
+          # Firebase allows multiple builds with the same app version as long as build number is unique
           VERSION_CODE=${{ github.run_number }}
-          echo "📦 Building AAB with version code: $VERSION_CODE"
+          echo "📦 Building AAB for Firebase App Distribution"
+          echo "   Version Code: $VERSION_CODE (from GitHub run number)"
           ./gradlew bundleDevelopRelease \
             -PversionCode=$VERSION_CODE \
             --no-daemon
