Fix iOS CI: Use Xcode 15.4 instead of latest-stable (Xcode 26)
- Changed Xcode version from 'latest-stable' to '15.4' in all iOS workflows
- Added Xcode version verification step for debugging
- Moved pod install to after Xcode setup
- Added clean step to remove Pods and Podfile.lock before pod install
- Fixes linker errors with React Native, Lottie, and Firebase pods
- Updated workflows: build-develop.yml, build-production.yml, ios-publish.yml

This prevents Xcode 26.2 from being used, which causes:
- Undefined symbols: __swift_FORCE_LOAD_
- SwiftUICore not found errors
- React Native compatibility issues

--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -353,15 +353,26 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Install CocoaPods dependencies
-        run: |
-          cd ios
-          pod install --repo-update
-
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: '15.4'
+
+      - name: Check Xcode version
+        run: |
+          echo "🔍 Verifying Xcode version..."
+          xcodebuild -version
+          xcode-select -p
+          echo "✅ Xcode version verified"
+
+      - name: Clean and install Pods
+        run: |
+          cd ios
+          echo "🧹 Cleaning Pods..."
+          rm -rf Pods Podfile.lock
+          echo "📦 Installing CocoaPods dependencies..."
+          pod install --repo-update
+          echo "✅ Pods installed successfully"
 
       - name: Build iOS Archive
         id: build_ios
